--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,9 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
     // for sweet alert dialog
-    implementation 'com.github.f0ris.sweetalert:library:1.5.6'
+    implementation 'com.github.cazaea:sweet-alert-dialog:1.0.0'
+    // for android networking api call
+    implementation 'com.amitshekhar.android:jackson-android-networking:1.0.0'
 
     //bar chart
     //implementation 'com.github.PhilJay:MPAndroidChart-Realm:v2.0.2@aar'
